gccida/c3/flow_loops_find
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/flow_loops_find/src/cfgloop.c:1175:12: error: expected expression
*( _OWORD *)&loops->cfg.dfs_order = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/flow_loops_find/src/cfgloop.c:1175:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&loops->cfg.dfs_order = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/flow_loops_find/src/cfgloop.c:1176:12: error: expected expression
*( _OWORD *)&loops->tree_root = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/flow_loops_find/src/cfgloop.c:1176:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&loops->tree_root = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/flow_loops_find/src/cfgloop.c:1177:12: error: expected expression
*( _OWORD *)&loops->num = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/flow_loops_find/src/cfgloop.c:1177:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&loops->num = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/flow_loops_find/src/cfgloop.c:1369:12: error: expected expression
*( _OWORD *)&v58->outer = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/flow_loops_find/src/cfgloop.c:1369:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v58->outer = 0LL; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/flow_loops_find/src/obj/cfgloop.o] Error 1
